added a audio and video

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Video</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <h2>Audio video</h2>
+    <audio controls src="assets/2019-10-30_-_Action_Rhythms_-_David_Fesliyan.mp3"></audio>
+    <video src="assets/video (2160p).mp4"></video>
 </body>
 </html>
