added new file and link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Video</title>
     <link rel="stylesheet" href="style/blog.css">
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="blog.html">blog</a></li>
+                <li><a href="form.html">form</a></li>
+                <li><a href="index.html">index</a></li>
+                <li><a href="new_table.html">new_table</a></li>
+                <li><a href="table.html">table</a></li>
+            </ul>
+        </nav>
+    </header>
     <h2>Audio video</h2>
     <audio controls src="assets/2019-10-30_-_Action_Rhythms_-_David_Fesliyan.mp3"></audio>
     <video controls src="assets/video (2160p).mp4"></video>
