--- a/form.html
+++ b/form.html
@@ -4,14 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apon Pitha gror</title>
+    <style>
+        label{
+            display: block;
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
-
     </header>
     <main>
         <section>
             <h2>Please fill up the form</h2>
+            <form>
+                <label for="name">Your Name:
+                    <input type="text" placeholder="Your name">
+                </label>
+                <label for="email">Your email:
+                    <input type="email" name="" id="email" placeholder="Your email">
+                </label>
+                <label for="phone">Phone Number:
+                    <input type="text" placeholder="Phone Number" id="phone">
+                </label>
+                <fieldset>
+                    <legend>
+                        pick one pitha
+                    </legend>
+                    <label for="chitoy"><input type="radio" name="pitha" id="chitoy">Chitoy</label>
+                    <label for="vapa pitha">
+                        <input type="radio" name="pitha" id="vapa pitha">Vapa pitha
+                    </label>
+                    <label for="puri">
+                        <input type="radio" name="pitha" id="puri">Puri
+                    </label>
+                    
+                </fieldset>
+                <fieldset>
+                    <legend>Pick one more vorta</legend>
+                    <label for="sorisa">
+                        <input type="checkbox" name="vorta" id="sorisa">Sorisa
+                    </label>
+                    <label for="chili">
+                        <input type="checkbox" name="vorta" id="chili">Chili
+                    </label>
+                    <label for="sutki">
+                        <input type="checkbox" name="vorta" id="sutki">Sutki
+                    </label>
+                </fieldset>
+                <fieldset>
+                    <legend>Special Instruction</legend>
+                    <textarea name="" id="" cols="30" rows="2"></textarea>
+                </fieldset>
+                
+                <input type="reset" value="reset">
+                <input type="submit" value="submit">
+            </form>
         </section>
 
     </main>
